 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES

PIG-3485: Remove CastUtils.bytesToMap(byte[] b) method from LoadCaster interface (cheolsoo) 

PIG-3419: Pluggable Execution Engine (achalsoni81 via cheolsoo)

PIG-2207: Support custom counters for aggregating warnings from different udfs (aniket486)

IMPROVEMENTS

PIG-3730: Performance issue in SelfSpillBag (rajesh.balamohan via rohini)

PIG-3654: Add class cache to PigContext (tmwoodruff via daijy)

PIG-3463: Pig should use hadoop local mode for small jobs (aniket486)

PIG-3573: Provide StoreFunc and LoadFunc for Accumulo (elserj via daijy)

PIG-3653: Add support for pre-deployed jars (tmwoodruff via daijy)

PIG-3645: Move FileLocalizer.setR() calls to unit tests (cheolsoo)

PIG-3637: PigCombiner creating log spam (rohini)

PIG-3632: Add option to configure cacheBlocks in HBaseStorage (rohini)

PIG-3619: Provide XPath function (Saad Patel via gates)

PIG-3590: remove PartitionFilterOptimizer from trunk (aniket486)

PIG-3580: MIN, MAX and AVG functions for BigDecimal and BigInteger (harichinnan via cheolsoo)

PIG-3569: SUM function for BigDecimal and BigInteger (harichinnan via rohini)

PIG-3505: Make AvroStorage sync interval take default from io.file.buffer.size (rohini)

PIG-3563: support adding archives to the distributed cache (jdonofrio via cheolsoo)

PIG-3388: No support for Regex for row filter in org.apache.pig.backend.hadoop.hbase.HBaseStorage (lbendig via cheolsoo)

PIG-3522: Remove shock from pig (daijy)

PIG-3295: Casting from bytearray failing after Union even when each field is from a single Loader (knoguchi)

PIG-3444: CONCAT with 2+ input parameters fail (lbendig via daijy)

PIG-3529: Upgrade HBase dependency from 0.95-SNAPSHOT to 0.96 (jarcec via daijy)

PIG-3117: A debug mode in which pig does not delete temporary files (ihadanny via cheolsoo)

PIG-3484: Make the size of pig.script property configurable (cheolsoo)
 
OPTIMIZATIONS
 
BUG FIXES
