@@ -242,3 +242,7 @@ pig.location.check.strict=false
 # Set value in long as a threshold number of bytes to convert
 # jobs with smaller input data size to run in local mode
 # pig.auto.local.input.maxbytes=100000000
+
+# When enabled, jobs won't create empty part files if no output is written. In this case
+# PigOutputFormat will be wrapped with org.apache.hadoop.mapreduce.lib.output.LazyOutputFormat.
+# pig.output.lazy=true
